44: experiment --add-modules=ALL-SYSTEM to surefire
Task-Url: https://github.com/LorenzoBettini/xtext-build-utils/issues/44