@@ -177,7 +177,7 @@
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>${maven-surefire-plugin-version}</version>
 					<configuration>
-						<argLine>${coverageTestArguments} ${systemProperties} ${additionalTestArguments}</argLine>
+						<argLine>--add-modules=ALL-SYSTEM ${coverageTestArguments} ${systemProperties} ${additionalTestArguments}</argLine>
 						<!-- workaround for https://issues.apache.org/jira/browse/SUREFIRE-1588 -->
 						<useSystemClassLoader>false</useSystemClassLoader>
 					</configuration>
